tests/rosetta/out/Rust/circular-primes.error
rustc error: exit status 1
warning: denote infinite loops with `loop { ... }`
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:40:9
   |
40 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

warning: denote infinite loops with `loop { ... }`
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:58:5
   |
58 |     while true {
   |     ^^^^^^^^^^ help: use `loop`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:43:18
   |
33 |         let mut nn = n;
   |                      - expected due to this value
...
43 |             nn = ((nn as f64) as f64) + f * (1 - pow) as f64;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `f64`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:81:13
   |
81 |             out += xs[i as usize].to_string();
   |             ---^--^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |   |
   |             |   `+` cannot be used to concatenate a `&str` with a `String`
   |             cannot use `+=` on type `&str`
   |
   = note: string concatenation requires an owned `String` on the left

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:83:17
   |
83 |                 out += ", ";
   |                 ---^^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0308]: mismatched types
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:87:16
   |
77 |     fn showList(xs: Vec<i32>) -> &'static str {
   |                                  ------------ expected `&str` because of return type
...
87 |         return format!("{}{}", out, "]");
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: variable does not need to be mutable
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:54:9
   |
54 |     let mut digits = vec![1, 3, 7, 9];
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0382]: use of moved value: `digits`
  --> /tmp/TestMochiRustGoldencircular-primes2354677381/001/prog.rs:71:22
   |
54 |     let mut digits = vec![1, 3, 7, 9];
   |         ---------- move occurs because `digits` has type `Vec<i32>`, which does not implement the `Copy` trait
...
58 |     while true {
   |     ---------- inside of this loop
...
71 |             for d in digits {
   |                      ^^^^^^ `digits` moved due to this implicit call to `.into_iter()`, in previous iteration of loop
   |
note: `into_iter` takes ownership of the receiver `self`, which moves `digits`
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/core/src/iter/traits/collect.rs:313:18
help: consider iterating over a slice of the `Vec<i32>`'s content to avoid moving into the `for` loop
   |
71 |             for d in &digits {
   |                      +

error: aborting due to 5 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0308, E0368, E0382.
For more information about an error, try `rustc --explain E0308`.
